--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ python:
   - "3.4"
 services: mongodb
 install:
+  - pip install -r requirements.txt -r requirements-test.txt
   - pip install motor
 script: nosetests
