--- a/setup.cfg
+++ b/setup.cfg
@@ -6,5 +6,5 @@ detailed-errors=1
 # Remove these lines once nose 1.2.2 comes out.
 nocapture=1
 nologcapture=1
-[wheel]
-python-tag=py3
+[bdist_wheel]
+universal=1
